--- a/05-advanced-python/0513_修饰符的作用.ipynb
+++ b/05-advanced-python/0513_修饰符的作用.ipynb
@@ -258,7 +258,7 @@
    ],
    "source": [
     "foo = Foo(23)\n",
-    "print foo.x"
+    "print(foo.x)"
    ]
   },
   {
@@ -270,8 +270,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-27T00:23:19.917419Z",
+     "start_time": "2022-09-27T00:23:19.912367Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -283,7 +288,7 @@
    ],
    "source": [
     "foo.x = 1\n",
-    "print foo.x"
+    "print (foo.x)"
    ]
   },
   {
@@ -297,7 +302,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`numpy` 的 `vectorize` 函数讲一个函数转换为 `ufunc`，事实上它也是一个修饰符："
+    "`numpy` 的 `vectorize` 函数将一个函数转换为 `ufunc`，事实上它也是一个修饰符；\n",
+    "\n",
+    "通函数（或简称为`ufunc`） 是一种ndarrays以逐元素方式操作的函数，支持数组广播，类型转换和其他一些标准功能。也就是说，ufunc是一个函数的 “ 矢量化 ” 包装器，它接受固定数量的特定输入并产生固定数量的特定输出。\n",
+    "\n",
+    "【Python效率】五种Pandas循环方法效率对比：https://zhuanlan.zhihu.com/p/80880493\n",
+    "\n",
+    "vectorize与apply性能对比相关：https://stackoverflow.com/questions/52673285/performance-of-pandas-apply-vs-np-vectorize-to-create-new-column-from-existing-c"
    ]
   },
   {
@@ -328,6 +339,331 @@
     "        return 0\n",
     "\n",
     "f(arange(-10.0,10.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-27T00:27:28.235713Z",
+     "start_time": "2022-09-27T00:27:28.207658Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-c6aef9e6d6c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m10.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-9-c6aef9e6d6c9>\u001b[0m in \u001b[0;36mf\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# @vectorize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
+   "source": [
+    "# cc: 如果不加@vectorize，f传进去的只能是一个x值\n",
+    "from numpy import vectorize, arange\n",
+    "\n",
+    "# @vectorize\n",
+    "def f(x):\n",
+    "    if x <= 0:\n",
+    "        return x\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "f(arange(-10.0,10.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-27T00:28:29.438765Z",
+     "start_time": "2022-09-27T00:28:29.428982Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-10.,  -9.,  -8.,  -7.,  -6.,  -5.,  -4.,  -3.,  -2.,  -1.,   0.,\n",
+       "         0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cc：加了@vectorize之后，就是将函数向量化\n",
+    "from numpy import vectorize, arange\n",
+    "\n",
+    "@vectorize\n",
+    "def f(x):\n",
+    "    if x <= 0:\n",
+    "        return x\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "f(arange(-10.0,10.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-27T00:38:52.031612Z",
+     "start_time": "2022-09-27T00:38:51.413105Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>70</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>43</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>91</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>89</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A   B\n",
+       "0  70  43\n",
+       "1  43  71\n",
+       "2  91   3\n",
+       "3  89  46\n",
+       "4  22   2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cc：拓展，关于pd.apply() 和 @vectorize 性能\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "N = 10\n",
+    "A_list = np.random.randint(1, 100, N)\n",
+    "B_list = np.random.randint(1, 100, N)\n",
+    "df = pd.DataFrame({'A': A_list, 'B': B_list})\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-27T00:40:03.734651Z",
+     "start_time": "2022-09-27T00:40:03.711037Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>result</th>\n",
+       "      <th>result2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>70</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1.627907</td>\n",
+       "      <td>1.627907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>43</td>\n",
+       "      <td>71</td>\n",
+       "      <td>0.605634</td>\n",
+       "      <td>0.605634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>91</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30.333333</td>\n",
+       "      <td>30.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>89</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1.934783</td>\n",
+       "      <td>1.934783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A   B     result    result2\n",
+       "0  70  43   1.627907   1.627907\n",
+       "1  43  71   0.605634   0.605634\n",
+       "2  91   3  30.333333  30.333333\n",
+       "3  89  46   1.934783   1.934783\n",
+       "4  22   2  11.000000  11.000000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def divide(a, b):\n",
+    "    if b == 0:\n",
+    "        return 0.0\n",
+    "    return float(a)/b\n",
+    "\n",
+    "df['result'] = df.apply(lambda row: divide(row['A'], row['B']), axis=1)\n",
+    "\n",
+    "df['result2'] = np.vectorize(divide)(df['A'], df['B'])\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-09-27T00:45:00.708520Z",
+     "start_time": "2022-09-27T00:44:58.431519Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "N=1000, df.apply: 0 sec, np.vectorize: 0 sec\n",
+      "\n",
+      "N=10000, df.apply: 0 sec, np.vectorize: 0 sec\n",
+      "\n",
+      "N=100000, df.apply: 2 sec, np.vectorize: 0 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "def divide(a, b):\n",
+    "    if b == 0:\n",
+    "        return 0.0\n",
+    "    return float(a)/b\n",
+    "\n",
+    "# for N in [1000, 10000, 100000, 1000000, 10000000]:    \n",
+    "for N in [1000, 10000, 100000]:\n",
+    "    print('')\n",
+    "    A_list = np.random.randint(1, 100, N)\n",
+    "    B_list = np.random.randint(1, 100, N)\n",
+    "    df = pd.DataFrame({'A': A_list, 'B': B_list})\n",
+    "\n",
+    "    start_epoch_sec = int(time.time())\n",
+    "    df['result'] = df.apply(lambda row: divide(row['A'], row['B']), axis=1)\n",
+    "    end_epoch_sec = int(time.time())\n",
+    "    result_apply = end_epoch_sec - start_epoch_sec\n",
+    "\n",
+    "    start_epoch_sec = int(time.time())\n",
+    "    df['result2'] = np.vectorize(divide)(df['A'], df['B'])\n",
+    "    end_epoch_sec = int(time.time())\n",
+    "    result_vectorize = end_epoch_sec - start_epoch_sec\n",
+    "\n",
+    "\n",
+    "    print('N=%d, df.apply: %d sec, np.vectorize: %d sec' % \\\n",
+    "            (N, result_apply, result_vectorize))\n",
+    "\n",
+    "    # Make sure results from df.apply and np.vectorize match.\n",
+    "    assert(df['result'].equals(df['result2']))"
    ]
   },
   {
