--- a/index.ipynb
+++ b/index.ipynb
@@ -8,22 +8,11 @@
     "\n",
     "# 中文 Python 笔记\n",
     "\n",
-    "> 版本：0.0.1<br>\n",
-    "> 作者：李金<br>\n",
-    "> 邮件：lijinwithyou@gmail.com<br>\n",
+    "来自：https://github.com/lijin-THU/notes-python \n",
     "\n",
     "由于涉及著作权的问题，对基于本笔记所做的修订、改编，目前不做任何正式授权。\n",
     "\n",
     "笔记内容仅供学习参考，未经允许，请勿用于任何商业用途。\n",
-    "\n",
-    "`Github` 加载 `.ipynb` 的速度较慢，建议在 [Nbviewer](http://nbviewer.ipython.org/github/lijin-THU/notes-python/blob/master/index.ipynb) 中查看该项目。\n",
-    "\n",
-    "基于本笔记的实体书：《自学Python——编程基础、科学计算及数据分析》已经出版。\n",
-    "\n",
-    "京东自营链接：\n",
-    "https://item.jd.com/12328920.html\n",
-    "\n",
-    "天猫、亚马逊、当当均有销售。\n",
     "\n",
     "---\n",
     "\n",
@@ -31,7 +20,10 @@
     "\n",
     "大部分内容来自网络。\n",
     "\n",
-    "默认安装了 `Python 2.7`，以及相关的第三方包 `ipython`， `numpy`， `scipy`，`pandas`。\n",
+    "原作者默认使用 `Python 2.7`，以及相关的第三方包 `ipython`， `numpy`， `scipy`，`pandas`。\n",
+    "\n",
+    "我在学习过程中遇到python3不兼容的问题也有对应的解决方法。\n",
+    "\n",
     "\n",
     "> life is short. use python.\n",
     "\n",
@@ -231,30 +223,34 @@
     "\t - [12.01 十分钟上手 Pandas](12-pandas/12.01-ten-minutes-to-pandas.ipynb)\n",
     "\t - [12.02 一维数据结构：Series](12-pandas/12.02-series-in-pandas.ipynb)\n",
     "\t - [12.03 二维数据结构：DataFrame](12-pandas/12.03-dataframe-in-pandas.ipynb)\n",
-    "     \n",
-    "**打赏一下意思意思？**\n",
-    "\n",
-    "![](payment.jpeg)"
+    "     "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
