--- a/index.ipynb
+++ b/index.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "原作者默认使用 `Python 2.7`，以及相关的第三方包 `ipython`， `numpy`， `scipy`，`pandas`。\n",
     "\n",
-    "我在学习过程中遇到python3不兼容的问题也有对应的解决方法。\n",
+    "*我在学习过程中遇到python3不兼容的问题也有对应的解决方法*。\n",
     "\n",
     "\n",
     "> life is short. use python.\n",
