uodate:关于eval 函数细节

--- a/05_Python高级用法/0516_动态编译.ipynb
+++ b/05_Python高级用法/0516_动态编译.ipynb
@@ -59,14 +59,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## eval 函数"
+    "## eval 函数\n",
+    "\n",
+    "eval是Python的一个内置函数，功能十分强大，这个函数的作用是，返回传入字符串的表达式的结果。就是说：将字符串当成有效的表达式 来求值 并 返回计算结果。\n",
+    "\n",
+    "详情见链接：https://blog.csdn.net/qq_26442553/article/details/94396532\n",
+    "\n",
+    "即，eval函数就是实现list、dict、tuple与str之间的转化，同样str函数把list，dict，tuple转为为字符串"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    eval(statement, glob, local)\n",
+    "语法：\n",
+    "\n",
+    "    eval(expression[, globals[, locals]])\n",
+    "    expression ： 表达式。\n",
+    "    globals ： （可选参数)变量作用域，全局命名空间，如果被提供，则必须是一个字典对象。\n",
+    "    locals ： (可选参数)变量作用域，局部命名空间，如果被提供，可以是任何映射对象。\n",
+    "\n",
+    "\n",
     "\n",
     "使用 `eval` 函数动态执行代码，返回执行的值："
    ]
@@ -121,6 +134,71 @@
     "glob = {}\n",
     "eval(\"a+1\", glob, local)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16 \n",
+      "\n",
+      "3 \n",
+      "\n",
+      "{'name': 'linux', 'age': 18}\n",
+      "<class 'dict'> \n",
+      "\n",
+      "{'name': 'linux', 'age': 1822}\n",
+      "{'name': 'linux', 'age': 1823} \n",
+      "\n",
+      "{'name': 'linux', 'age': 18}\n",
+      "-----------------\n",
+      "{'name': 'linux', 'age': 18}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.eval无参实现字符串转化\n",
+    "s = '1+2+3*5-2'\n",
+    "print(eval(s),'\\n')  #16\n",
+    " \n",
+    "#2.字符串中有变量也可以\n",
+    "x = 1\n",
+    "print(eval('x+2'), '\\n')  #3\n",
+    " \n",
+    "#3.字符串转字典\n",
+    "dict1 = eval(\"{'name':'linux','age':18}\")\n",
+    "print(dict1)\n",
+    "print(type(dict1), '\\n')\n",
+    "\n",
+    "#输出结果：{'name':'linux','age':18}\n",
+    " \n",
+    "#4.eval传递全局变量参数,注意字典里的:age中的age没有带引号，说明它是个变量，而不是字符串。\n",
+    "#这里两个参数都是全局的\n",
+    "print(eval(\"{'name':'linux','age':age}\",{\"age\":1822}))\n",
+    "#输出结果：{'name': 'linux', 'age': 1822}\n",
+    "print(eval(\"{'name':'linux','age':age}\",{\"age\":1822},{\"age\":1823}), '\\n')\n",
+    "#输出结果：{'name': 'linux', 'age': 1823} \n",
+    "#eval传递本地变量，既有global和local时，变量值先从local中查找。\n",
+    "\n",
+    "# cc：这里也是同理：eval传递本地变量，既有global和local时，变量值先从local中查找。\n",
+    "age=18\n",
+    "print(eval(\"{'name':'linux','age':age}\",{\"age\":1822},locals()))\n",
+    "#输出结果：{'name': 'linux', 'age': 18}\n",
+    "print(\"-----------------\")\n",
+    " \n",
+    "print(eval(\"{'name':'linux','age':age}\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -391,7 +469,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -406,6 +484,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "cfd8cd7a69a970efc7244ffe4f72e0e34414b380f95a0e79d3fe2a1dfe858bee"
+   }
   }
  },
  "nbformat": 4,
