--- a/14_optuna/optuna_sample.ipynb
+++ b/14_optuna/optuna_sample.ipynb
@@ -195,38 +195,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32fe7094",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91f7af4c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "914d84bb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6470f7a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "429890b7",
    "metadata": {},
@@ -274,14 +242,6 @@
     "\n",
     "    return np.mean(cv_scores)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb97433f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -354,22 +314,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f60fb65",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfd6b547",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "c8b6a50a",
    "metadata": {},
@@ -416,9 +360,9 @@
     "    \n",
     "    for brand, category in brand_cate:\n",
     "        for fcst_date in range(202115, 202120):\n",
-    "            full_df = make_full_df(weekly_sales, fcstlist, fcst_date, 9, category, brand )\n",
-    "            merge_df = data_prepare(full_df, barcode_master, store_master, promotion, calendar_features, wm_yr_wk_week, new_agg_holiday_df, fcst_date)\n",
-    "            processed_df = data_process(merge_df, brand)\n",
+    "            full_df = make_full_df()\n",
+    "            merge_df = data_prepare()\n",
+    "            processed_df = data_process()\n",
     "\n",
     "    #         processed_df = processed_df.rename(columns={'year_week':'wm_yr_wk', 'prom_type':'promo_type'})\n",
     "            for horizon in range(1, 10):\n",
@@ -453,53 +397,6 @@
     "    print(\"  Params: \")\n",
     "    for key, value in trial.params.items():\n",
     "        print(\"    {}: {}\".format(key, value))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8bb0ddd6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45b6e53b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7e8106b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# regression\n",
-    "pred_list = []\n",
-    "for class_name in class_list:\n",
-    "    model_params = params[class_name]\n",
-    "    if class_name == 'default':\n",
-    "        feature_class = feature_df\n",
-    "    else:\n",
-    "        feature_class = feature_df[feature_df[model_split_label] == class_name]\n",
-    "    model = LGBModel(objective='regression',\n",
-    "                     feature_name=features,\n",
-    "                     categorical_feature=category_features,\n",
-    "                     feature_df=feature_class,\n",
-    "                     date_col=date_col,\n",
-    "                     target_col=target_col,\n",
-    "                     params=model_params)\n",
-    "    create_models_folder(model_version, class_name)\n",
-    "    model.train_test_split()\n",
-    "    model.train()\n",
-    "    _ = model.predict()\n",
-    "    save_lgb_model(model.model, horizon, model_version, class_name)\n",
-    "    pred_list.append(model.pred_df)\n",
-    "pred_df = pd.concat(pred_list)[output_cols]"
    ]
   }
  ],
