update:间隔月份计算

--- a/04-pandas/ch10p05_时期及其算术运算_Period_period_range.ipynb
+++ b/04-pandas/ch10p05_时期及其算术运算_Period_period_range.ipynb
@@ -828,6 +828,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c372302e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cc 案例：两个日期列转为月份，再求相间月数\n",
+    "# 注意：案例中因为 日期字段为string类型所以还做了一层to_datetime的转化，如果数据中是日期类型可以不进行这一步\n",
+    "\n",
+    "pred_hist['index'] = (pd.to_datetime(pred_hist['date']).dt.to_period('M') - pd.to_datetime(pred_hist['report_date']).dt.to_period('M')).apply(lambda x: x.n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "id": "14463970",
    "metadata": {
